# citz-imb-ai

./: .gitignore  DVCReadme.md  DockerCompose.yaml  compose.dev.yaml  data.dvc  readme.md
.docker/: .env-template  Dockerfile.awscron  Dockerfile.llamacpp  compose.controller.yaml
.docker/llm/: Caddyfile  README.md  entrypoint.sh  litellm_config.yaml  models.conf  models.json
.dvc/: config
.github/: CODEOWNERS  DEV-app-image-build.yaml  DEV-app-image-deploy.yaml  PULL_REQUEST_TEMPLATE.md  TEST-app-image-deploy.yaml  dag-upload.yaml
.github/config/: auto-assign-config.yaml
.github/helpers/: update-wiki-table.py
.github/workflows/: DEV-app-image-build.yaml  DEV-fastapi-image-build-push.yaml  DEV-frontend-image-build-push.yaml  PROD-app-image-deploy.yaml  aws-creds-cron-image-build-push.yaml  dag-upload.yaml  dbt-upload.yaml  fastapi-image-build-push.yaml  frontend-analytics-image-build-push.yaml  frontend-image-build-push.yaml  llm-image-build-push.yaml  ocp-airflow-scheduler-image-build-push.yaml  ocp-airflow-webserver-image-build-push.yaml  pr-auto-assign.yaml  trulens-dashboard-image-build-push.yaml  update-gitops-repo-backend.yaml  update-gitops-repo-frontend-analytics.yaml  update-gitops-repo-frontend.yaml  update-gitops-repo-llm-server.yaml  update-gitops-repo-trulens-dashboard.yaml  update-gitops-repo.yaml
HPC/: readme.md
HPC/HPC_Embeddings/: .bash.rc  BCLawsCopyFiles.py  BCLawsCopyFiles_v2.py  CMakeLists.txt  acts.json  diff  mpi_receiver.py  readme.md  reg.json  requirements.txt  script.sh
HPC/HPC_Embeddings/Benchmarks/: readme.md
HPC/HPC_Embeddings/docs/: HPC_wordpiece_pretokenizer.md  end_to_end_legislative_data_processing.md  hashtable_murmur3.md  memory_pool.md
HPC/HPC_Embeddings/include/: acts.h  acts_reg.h  file_dram.h  json_format.h  load_tokens.h  memory.h  memory_pool.h  mpi_def.h  process_config.h  regulations.h  text_splitter.h  thread_buffer.h  token_text_splitter.h  xml_parser.h
HPC/HPC_Embeddings/include/data_structures/: hash_table.h
HPC/HPC_Embeddings/openvino/: vector_openvino_one.py
HPC/HPC_Embeddings/openvino_env/: generate_embeddings_all.py  run_embeddings.sh  vector_openvino_stream_mean_modin.py
HPC/HPC_Embeddings/src/: main.c
HPC/HPC_Embeddings/src/acts/: acts.c
HPC/HPC_Embeddings/src/data_structures/: CMakeLists.txt  hash_table.c
HPC/HPC_Embeddings/src/process_acts_reg/: CMakeLists.txt  acts_reg.c
HPC/HPC_Embeddings/src/regulations/: CMakeLists.txt  regulations.c
HPC/HPC_Embeddings/src/utility/: CMakeLists.txt  HPC_wordpiece_pretokenizer.md  data_processing.c  file_dram.c  json_format.c  load_tokens.c  memory.c  memory_pool.c  mpi_def.c  process_config.c  text_splitter.c  thread_buffer.c  token_text_splitter.c  xml_parser.c
Hardware/: readme.md
Hardware/intelHW/: Makeflie  avxtest.c  readme.md
JSON_glossary/: glossary.json
architecture/: readme.md
architecture/detailedflow/: readme.md
backend/: Dockerfile  Offence_Act.ipynb  app.py  datacleanup_neo4j.ipynb  embedding_adaptors.ipynb  federal_law.ipynb  fullLaw.ipynb  get_ticket_Dispute.ipynb  getlawtitles.py  gradio.ipynb  init.ipynb  init.py  kv_caching.ipynb  model.ipynb  neo4j.ipynb  readme.md  requirements.txt  s3_v2.py  trulens.py
backend/.ipynb_checkpoints/: fullLaw-checkpoint.ipynb
backend/fastapi/: Dockerfile  main.py  ragfromscratch.py  requirements.txt
data/json/: Access_to_Abortion_Services_Act.json  Advanced_Education_Statute_Repeal_Act.json  Age_of_Majority_Act.json  An_Act_to_Incorporate_the_Greater_Vancouver_Sewerage_and_Drainage_District.json  An_Act_to_Repeal_the_Land_Settlement_and_Development_Act_and_to_Vest_the_Undertaking_of_the_Board_Thereby_Established_in_the_Crown.json  Anatomy_Act.json  Animal_Health_Act.json  AntiRacism_Data_Act.json  Arbitration_Act_SBC_2020_c_2.json  Armoured_Vehicle_and_AfterMarket_Compartment_Control_Act.json  Arts_Council_Act.json  Assessment_Act.json  Assistance_to_Shelter_Act.json  Auditor_General_Act.json  BCAlcan_Northern_Development_Fund_Act.json  BC_Benefits_Child_Care_Subsidy_Act.json  BC_Transportation_Financing_Authority_Transit_Assets_and_Liabilities_Act.json  British_Columbia_Railway_Finance_Act.json  Building_Act.json  Business_Corporations_Act.json  Child_Care_Subsidy_Act.json  Civil_Forfeiture_Act.json  Civil_Resolution_Tribunal_Act.json  Civil_Rights_Protection_Act.json  Community_Care_and_Assisted_Living_Act.json  Community_Charter_Transitional_Provisions_Consequential_Amendments_and_Other_Amendments_Act_2003.json  Community_Services_Interim_Authorities_Act.json  Constitution_Act.json  Criminal_Asset_Management_Act.json  Criminal_Code.json  Dike_Maintenance_Act.json  Early_Learning_and_Child_Care_Act.json  Electoral_Districts_Act.json  Electronic_Transactions_Act.json  Emergency_Communications_Corporations_Act.json  Employer_Health_Tax_Act.json  Employment_Standards_Act.json  Energy_Resource_Activities_Act.json  Family_Day_Act.json  Farm_Income_Insurance_Act.json  (+119 more)
data/scripts/: FixHTML.js  HTMLCleanup.py  RemoveWhitespaceFromTXT.py
data/xsd/: regulation.xsd
data/xsl/: act-html.xsl  bylaw.xsl
data_v2/OCR/: TicketDisputeV4.json
data_v2/xsd/: act.xsd  bylaw.xsd
data_v2/xsl/: reg-html.xsl
examples/: A.I_Agents_RedTeaming_workflow.ipynb  AI_preannotation_full.ipynb  Dockerfile  ImageOCR-7b-1.ipynb  ImageOCR-7b-2.ipynb  ImageOCR-7b.ipynb  LeidenComunity_glossary.ipynb  ai_agent_prompt.py  bedrock_session.py  diffgram_postprocessing_NER_training.ipynb  fullLaw.ipynb  glossary.ipynb  gradio.ipynb  init.ipynb  init.py  neo4j.ipynb  neo4j_Leiden_Algo.ipynb  readme.md  security_validation.py  validate_json_output.py
examples/utility/: s3.py  (+3 more)
feedback/: readme.md
frontend/: Dockerfile  index.html  view.html
gradio/: app-llm.py  app.py  dockerfile  gradio-summary-retrival.py  requirements.txt
mistral/: app.py  dockerfile  requirements.txt
scripts/: FormatHTML.js  FormatHTML2.js  HTMLTableExtractor.py  HTMLTableExtractor2.py  HTMLtoTXT.py  RemoveWhitespaceFromTXT2.py  downloadBCLawsHTML.js  downloadBCLawsXML.js
(+102904 files in other folders)
